Correcion de la ruta de las imagenes

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <header>
         <nav class="navegacion">
             <div class="navegacion__contenedor">
-                <a href="./index.html" class="navegacion__logo">
-                    <img src="./../image/logo.png" alt="Logo" height="50px">
+                <a href="index.html" class="navegacion__logo">
+                    <img src="image/logo.png" alt="Logo" height="50px">
                 </a>
                 <div class="navegacion__menu">
                     <ul>
                         <li>
-                            <a href="./index.html">Inicio</a>
+                            <a href="index.html">Inicio</a>
                         </li>
                         <li>
                             <a href="#">Productos</a>
@@ -40,13 +40,13 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./../image/image1.png" class="d-block w-100" alt="...">
+                    <img src="image/image1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./../image/image2.png" class="d-block w-100" alt="...">
+                    <img src="image/image2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./../image/image3.png" class="d-block w-100" alt="...">
+                    <img src="image/image3.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -66,7 +66,7 @@
                 <div class="nosotros__fondo"></div>
                 <div class="nosotros__contenedor">
                     <span class="nosotros__titulo">Tazas</span>
-                    <img class="nosotros__imagen" src="./../image/image6.png" alt="imagen">
+                    <img class="nosotros__imagen" src="image/image6.png" alt="imagen">
                     <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                         beatae enim nulla quidem eveniet libero sunt. Dolores
                         labore ab ullam beatae commodi esse excepturi facilis. Exercitationem quo dignissimos temporibus
@@ -101,7 +101,7 @@
                     <span class="noticias__titulo">Noticias</span>
                     <div class="noticias__tarjetas">
                         <div class="noticias__tarjeta">
-                            <img src="./../image/image7.png" alt="">
+                            <img src="image/image7.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="noticias__tarjeta">
-                            <img src="./../image/image8.png" alt="">
+                            <img src="image/image8.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="noticias__tarjeta">
-                            <img src="./../image/image9.png" alt="">
+                            <img src="image/image9.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
