Barra de menu responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <a href="index.html" class="navegacion__logo">
                     <img src="image/logo.png" alt="Logo" height="50px">
                 </a>
+
+                <input type="checkbox" id="menu-toggle" class="menu-toggle">
+                <label for="menu-toggle" class="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </label>
+
                 <div class="navegacion__menu">
                     <ul>
                         <li>
@@ -222,7 +228,8 @@
                             <i class="fa-solid fa-star estrella" style="color: gray;"></i>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde magnam laboriosam at amet natus, esse non fugiat.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
+                        magnam laboriosam at amet natus, esse non fugiat.</p>
                 </div>
                 <div class="comentacios__tarjeta">
                     <div class="comentarios__tarejta_cabecera">
@@ -236,7 +243,8 @@
                             <i class="fa-solid fa-star estrella" style="color: gold;"></i>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde magnam laboriosam at amet natus, esse non fugiat.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
+                        magnam laboriosam at amet natus, esse non fugiat.</p>
                 </div>
                 <div class="comentacios__tarjeta">
                     <div class="comentarios__tarejta_cabecera">
@@ -250,7 +258,8 @@
                             <i class="fa-solid fa-star estrella" style="color: gray;"></i>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde magnam laboriosam at amet natus, esse non fugiat.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
+                        magnam laboriosam at amet natus, esse non fugiat.</p>
                 </div>
             </div>
         </section>
@@ -262,7 +271,7 @@
             <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
         </div>
         <div class="informacion-complementaria">
-            <p>&copy; 2025 Tazas Creativas. Todos los derechos reservados.  
+            <p>&copy; 2025 Tazas Creativas. Todos los derechos reservados.
                 Av. del Diseño 123, Planta 2, 28000 Madrid, España.</p>
         </div>
     </footer>
