barra de navegacion reutilizable

--- a/index.html
+++ b/index.html
@@ -14,35 +14,9 @@
 
 <body>
     <header>
-        <nav class="navegacion">
-            <div class="navegacion__contenedor">
-                <a href="index.html" class="navegacion__logo">
-                    <img src="image/logo.png" alt="Logo" height="50px">
-                </a>
+        
+        <nav id="nav-placeholder"></nav>
 
-                <input type="checkbox" id="menu-toggle" class="menu-toggle">
-                <label for="menu-toggle" class="menu-icon">
-                    <i class="fas fa-bars"></i>
-                </label>
-
-                <div class="navegacion__menu">
-                    <ul>
-                        <li>
-                            <a href="index.html">Inicio</a>
-                        </li>
-                        <li>
-                            <a href="#">Productos</a>
-                        </li>
-                        <li>
-                            <a href="#">Presupuesto</a>
-                        </li>
-                        <li>
-                            <a href="#">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -276,7 +250,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./js/navigator.js"></script>
 </body>
 
 </html>
