--- a/index.html
+++ b/index.html
@@ -238,19 +238,12 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="redes">
-            <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
-        </div>
-        <div class="informacion-complementaria">
-            <p>&copy; 2025 Tazas Creativas. Todos los derechos reservados.
-                Av. del Diseño 123, Planta 2, 28000 Madrid, España.</p>
-        </div>
-    </footer>
+    
+    <footer id="footer-placeholder"></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/navigator.js"></script>
+    <script src="./js/footer.js"></script>
 </body>
 
 </html>
