--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -20,13 +20,13 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/image/image1.png" class="d-block w-100" alt="...">
+                    <img src="./image/image1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/image/image2.png" class="d-block w-100" alt="...">
+                    <img src="./image/image2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/image/image3.png" class="d-block w-100" alt="...">
+                    <img src="./image/image3.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -46,7 +46,7 @@
                 <div class="nosotros__fondo"></div>
                 <div class="nosotros__contenedor">
                     <span class="nosotros__titulo">Tazas</span>
-                    <img class="nosotros__imagen" src="/image/image6.png" alt="imagen">
+                    <img class="nosotros__imagen" src="./image/image6.png" alt="imagen">
                     <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                         beatae enim nulla quidem eveniet libero sunt. Dolores
                         labore ab ullam beatae commodi esse excepturi facilis. Exercitationem quo dignissimos temporibus
@@ -81,7 +81,7 @@
                     <span class="noticias__titulo">Noticias</span>
                     <div class="noticias__tarjetas">
                         <div class="noticias__tarjeta">
-                            <img src="image/image7.png" alt="">
+                            <img src="./image/image7.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="noticias__tarjeta">
-                            <img src="image/image8.png" alt="">
+                            <img src="./image/image8.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <div class="noticias__tarjeta">
-                            <img src="image/image9.png" alt="">
+                            <img src="./image/image9.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
                                 magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
                                 molestias quae odio eius quasi!</p>
