--- a/html/navigator.html
+++ b/html/navigator.html
@@ -1,7 +1,7 @@
 <nav class="navegacion">
     <div class="navegacion__contenedor">
-        <a href="./../index.html" class="navegacion__logo">
-            <img src="./../image/logo.png" alt="Logo" height="50px">
+        <a href="/index.html" class="navegacion__logo">
+            <img src="/image/logo.png" alt="Logo" height="50px">
         </a>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -12,10 +12,10 @@
         <div class="navegacion__menu">
             <ul>
                 <li>
-                    <a href="./../index.html">Inicio</a>
+                    <a href="/index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="./productos.html">Productos</a>
+                    <a href="/html/productos.html">Productos</a>
                 </li>
                 <li>
                     <a href="#">Presupuesto</a>
