--- a/html/productos.html
+++ b/html/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Productos</title>
@@ -25,7 +25,7 @@
     
     <footer id="footer-placeholder"></footer>
 
-    <script src="/js/navigator.js"></script>
+    <script src="../js/navigator.js"></script>
     <script src="/js/footer.js"></script>
     <script src="/js/productos.js"></script>
 </body>
