--- a/html/navigator.html
+++ b/html/navigator.html
@@ -1,6 +1,6 @@
 <nav class="navegacion">
     <div class="navegacion__contenedor">
-        <a href="./index.html" class="navegacion__logo">
+        <a href="index.html" class="navegacion__logo">
             <img src="image/logo.png" alt="Logo" height="50px">
         </a>
 
