--- a/html/productos.html
+++ b/html/productos.html
@@ -26,7 +26,7 @@
     <footer id="footer-placeholder"></footer>
 
     <script src="../js/navigator.js"></script>
-    <script src="/js/footer.js"></script>
-    <script src="/js/productos.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/productos.js"></script>
 </body>
 </html>
