--- a/html/navigator.html
+++ b/html/navigator.html
@@ -1,7 +1,7 @@
 <nav class="navegacion">
     <div class="navegacion__contenedor">
-        <a href="index.html" class="navegacion__logo">
-            <img src="image/logo.png" alt="Logo" height="50px">
+        <a href="/tazas/index.html" class="navegacion__logo">
+            <img src="/tazas/image/logo.png" alt="Logo" height="50px">
         </a>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
