--- a/html/navigator.html
+++ b/html/navigator.html
@@ -15,7 +15,7 @@
                     <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="html/productos.html">Productos</a>
+                    <a href="/tazas/html/productos.html">Productos</a>
                 </li>
                 <li>
                     <a href="#">Presupuesto</a>
