corrigiendo json productos2

--- a/html/navigator.html
+++ b/html/navigator.html
@@ -12,7 +12,7 @@
         <div class="navegacion__menu">
             <ul>
                 <li>
-                    <a href="index.html">Inicio</a>
+                    <a href="/tazas/index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="/tazas/html/productos.html">Productos</a>
