--- a/pages/productos.html
+++ b/pages/productos.html
@@ -25,8 +25,8 @@
     
     <footer id="footer-placeholder"></footer>
 
-    <script src="../js/navigator.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/productos.js"></script>
+    <script src="./../js/navigator.js"></script>
+    <script src="./../js/footer.js"></script>
+    <script src="./../js/productos.js"></script>
 </body>
 </html>
