--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <footer id="footer-placeholder"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./../js/navigator.js"></script>
+    <script src="./js/navigator.js"></script>
     <script src="js/footer.js"></script>
 </body>
 
