--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        
+
         <nav id="nav-placeholder"></nav>
 
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -45,7 +45,7 @@
             <div class="nosotros">
                 <div class="nosotros__fondo"></div>
                 <div class="nosotros__contenedor">
-                    <span class="nosotros__titulo">Tazas</span>
+                    <h2 class="nosotros__titulo">Tazas</h2>
                     <img class="nosotros__imagen" src="images/image6.png" alt="imagen">
                     <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                         beatae enim nulla quidem eveniet libero sunt. Dolores
@@ -78,51 +78,16 @@
         <section>
             <div class="noticias">
                 <div class="noticias__contenedor">
-                    <span class="noticias__titulo">Noticias</span>
+                    <h2 class="noticias__titulo">Noticias</h2>
                     <div class="noticias__tarjetas">
-                        <div class="noticias__tarjeta">
-                            <img src="images/image7.png" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
-                                magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
-                                molestias quae odio eius quasi!</p>
-                            <div>
-                                <span> <b>Seguir leyendo</b> </span>
-                                <button class="btn btn-link">
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="noticias__tarjeta">
-                            <img src="images/image8.png" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
-                                magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
-                                molestias quae odio eius quasi!</p>
-                            <div>
-                                <span> <b>Seguir leyendo</b> </span>
-                                <button class="btn btn-link">
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="noticias__tarjeta">
-                            <img src="images/image9.png" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut numquam, eaque id delectus
-                                magnam, veniam nobis debitis vero repellat accusantium quisquam est fugit porro. Quaerat
-                                molestias quae odio eius quasi!</p>
-                            <div>
-                                <span> <b>Seguir leyendo</b> </span>
-                                <button class="btn btn-link">
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
         </section>
         <section>
             <div class="puntuacion">
-                <p class="puntuacion__titulo">opiniones</p>
+                <h2 class="h2untuacion__titulo">Opiniones</h2>
                 <div class="puntuacion__contenedor">
                     <div class="puntuacion__contenedor_left">
                         <div>
@@ -190,59 +155,66 @@
         </section>
         <section>
             <div class="comentarios">
-                <div class="comentacios__tarjeta">
-                    <div class="comentarios__tarejta_cabecera">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Carlos Lopez</span>
-                        <div>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gray;"></i>
+                <h2>Comentarios</h2>
+                <div class="comentarios-contenedor">
+                    <div class="comentacios__tarjeta">
+                        <div class="comentarios__tarejta_cabecera">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Carlos Lopez</span>
+                            <div>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gray;"></i>
+                            </div>
                         </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur
+                            unde
+                            magnam laboriosam at amet natus, esse non fugiat.</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
-                        magnam laboriosam at amet natus, esse non fugiat.</p>
-                </div>
-                <div class="comentacios__tarjeta">
-                    <div class="comentarios__tarejta_cabecera">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Carlos Lopez</span>
-                        <div>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                    <div class="comentacios__tarjeta">
+                        <div class="comentarios__tarejta_cabecera">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Carlos Lopez</span>
+                            <div>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                            </div>
                         </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur
+                            unde
+                            magnam laboriosam at amet natus, esse non fugiat.</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
-                        magnam laboriosam at amet natus, esse non fugiat.</p>
-                </div>
-                <div class="comentacios__tarjeta">
-                    <div class="comentarios__tarejta_cabecera">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Carlos Lopez</span>
-                        <div>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gold;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gray;"></i>
-                            <i class="fa-solid fa-star estrella" style="color: gray;"></i>
+                    <div class="comentacios__tarjeta">
+                        <div class="comentarios__tarejta_cabecera">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Carlos Lopez</span>
+                            <div>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gold;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gray;"></i>
+                                <i class="fa-solid fa-star estrella" style="color: gray;"></i>
+                            </div>
                         </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur
+                            unde
+                            magnam laboriosam at amet natus, esse non fugiat.</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit tempora consectetur unde
-                        magnam laboriosam at amet natus, esse non fugiat.</p>
                 </div>
             </div>
         </section>
     </main>
-    
+
     <footer id="footer-placeholder"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/navigator.js"></script>
+    <script src="./js/noticias.js"></script>
     <script src="js/footer.js"></script>
 </body>
 
