--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,123 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/contacto.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Contacto</title>
 
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" >
     <!-- Leaflet Routing Machine CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" >
 
-    <style>
-        :root {
-            --brand: #0b009e;
-        }
 
-        body {
-            font-family: system-ui, Arial, sans-serif;
-            margin: 0;
-            color: #222;
-        }
-
-        header {
-            border-bottom: 1px solid #eee;
-        }
-
-        .grid {
-            display: grid;
-            gap: 16px;
-            padding: 16px 20px;
-        }
-
-        .card {
-            border: 1px solid #eee;
-            border-radius: 14px;
-            padding: 16px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, .04);
-        }
-
-        .brand {
-            color: var(--brand);
-            font-weight: 700;
-        }
-
-        .actions {
-            display: flex;
-            gap: 8px;
-            flex-wrap: wrap;
-            margin-top: 8px;
-        }
-
-        .btn {
-            border: 1px solid #ddd;
-            background: #fff;
-            padding: 10px 14px;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            border-color: #bbb;
-        }
-
-        .btn-primary {
-            background: var(--brand);
-            color: #fff;
-            border-color: var(--brand);
-        }
-
-        .map-wrap {
-            width: 100%;
-        }
-
-        #map {
-            width: 100%;
-            height: clamp(360px, 55vh, 640px);
-            border-radius: 14px;
-            overflow: hidden;
-        }
-
-        /* Pin sencillo verde */
-        .custom-pin {
-            width: 22px;
-            height: 22px;
-            background: var(--brand);
-            border-radius: 50%;
-            border: 2px solid #fff;
-            box-shadow: 0 1px 4px rgba(0, 0, 0, .4);
-            position: relative
-        }
-
-        .custom-pin::after {
-            content: "";
-            position: absolute;
-            left: 50%;
-            bottom: -8px;
-            transform: translateX(-50%);
-            width: 0;
-            height: 0;
-            border: 8px solid transparent;
-            border-top-color: var(--brand)
-        }
-
-        .leaflet-popup-content-wrapper,
-        .leaflet-popup-tip {
-            border-radius: 10px;
-        }
-
-        footer {
-            padding: 16px 20px;
-            color: #666;
-            font-size: .9rem
-        }
-    </style>
 </head>
 
 <body>
