--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -66,7 +66,7 @@
                     <legend>Aceptación</legend>
 
                     <div style="display:flex; align-items: center; gap:1rem">
-                        <input type="checkbox" id="privacidad" name="privacidad" />
+                        <input type="checkbox" id="privacidad" name="privacidad">
                         <label for="privacidad">He leído la política de privacidad</label><br><br>
                     </div>
 
